# getIP

./: .bumpversion.cfg  .bumpversion.toml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-publish.yml  tag-version.yml
scripts/: version_increment.py
src/getIP/: getIP.py
tests/: test_getIP.py
